--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Harshal Patel</title>
+  <title>Devopscoding</title>
   <meta content="Welcome to Devopscoding. This is Website Developer and React Native Android Application Developement." name="description">
   <meta content="devopscoding, programming, coding, devops, instagram, facebook, twitter, devopscoding in instagram, devopscoding in github, devopscoding in github.io" name="keywords">
 
