add HTML Learn APP

--- a/index.html
+++ b/index.html
@@ -339,7 +339,22 @@
               <p>This is the Covid 19 Tracking Application using react native</p>
               <a href="https://github.com/devopscoding/CovidTrackerApp" class="btn btn-danger" style="margin-top: 3px;">Click Now</a>
             </div>
+        </div>
+
+      <!-- Learn HTML Free Playstore App -->
+        <div class="col-lg-4 col-md-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box iconbox-blue">
+            <div class="icon">
+              <img src="assets/img/htmllearn.png" class="img-fluid" alt="" style="height: 100px;width: 100px;">
+            </div>
+            <h4><a href="#">Learn HTML 5</a></h4>
+            <p>This is my new Application using react native.And this available in PlayStore!</p>
+
+              <a href="https://play.google.com/store/apps/details?id=com.learnhtml5"><img src="assets/img/playstore.png" class="img-fluid" alt="" style="height: 125px;width: 100px;"></a>
+            
+            <!-- <a href="https://github.com/devopscoding/CovidTrackerApp" class="btn btn-danger" style="margin-top: 3px;">Click Now</a> -->
           </div>
+        </div>  
 
       </div>
     </section><!-- End Work Section -->
