--- a/index.html
+++ b/index.html
@@ -366,12 +366,13 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>Find Me on Here!</p>
+          <h5>devopscode21@gmail.com</h5>
         </div>
         <div class="row">
           <footer id="contactsocial">
             <div class="container">
               <div class="social-links">
-                <a href="mailto:harshalbhagat224@gmail.com" class="envelope"><i class="bi bi-envelope-fill"></i></a>
+                <a href="mailto:devopscode21@gmail.com" class="envelope"><i class="bi bi-envelope-fill"></i></a>
                 <a href="https://twitter.com/devopscoding" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/harshal1882001/" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/devopscoding/" class="instagram"><i class="bx bxl-instagram"></i></a>
