--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           </div>
         </div>  
 
-        <!-- Learn HTML Free Playstore App -->
+        <!-- ULearn Free Playstore App -->
         <div class="col-lg-4 col-md-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box iconbox-blue">
             <div class="icon">
