--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </div>
             <h4><a href="#">Learn HTML 5</a></h4>
             <p>This is my new Application using react native.And this available in PlayStore!</p>
-
+              <a href="https://github.com/devopscoding/Learn-HTML5" class="btn btn-danger" style="margin-top: 3px;">Click Now</a>
               <a href="https://play.google.com/store/apps/details?id=com.learnhtml5"><img src="assets/img/playstore.png" class="img-fluid" alt="" style="height: 125px;width: 100px;"></a>
             
             <!-- <a href="https://github.com/devopscoding/CovidTrackerApp" class="btn btn-danger" style="margin-top: 3px;">Click Now</a> -->
@@ -364,7 +364,7 @@
             </div>
             <h4><a href="#">ULearn - Free Udemy Course and Coupons</a></h4>
             <p>This Application are available in PlayStore!</p>
-
+              <a href="https://github.com/devopscoding/ULearn-App" class="btn btn-danger" style="margin-top: 3px;">Click Now</a>
               <a href="https://play.google.com/store/apps/details?id=com.ulearn"><img src="assets/img/playstore.png" class="img-fluid" alt="" style="height: 125px;width: 100px;"></a>
             
             <!-- <a href="https://github.com/devopscoding/CovidTrackerApp" class="btn btn-danger" style="margin-top: 3px;">Click Now</a> -->
